# rabbit-py

./: .clinerules  README.md  docker-compose.yaml  pyproject.toml
src/: analytics.py  config.py  connection.py  demo.py  exchanges.py  log_consumer.py  models.py  notification.py  producer.py  rpc.py  setup.py  worker.py
src/consumers/: __init__.py  analytics.py  log_consumer.py  notification.py  order_worker.py
src/producers/: __init__.py  event_producer.py  order_producer.py
src/rpc/: __init__.py  inventory_rpc.py
