[project]
name = "rabbit-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{name = "Guy Chait", email = "53366531+gchait@users.noreply.github.com"}]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pika>=1.3.2"
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-randomly>=4.0.1",
    "pytest-env>=1.2.0",
]

[tool.pdm]
distribution = false

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
disable_error_code = "import-untyped"
disallow_untyped_defs = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pdm.scripts]
rabbitup = "docker compose up -d rabbitmq"
rabbitdown = "docker compose down rabbitmq"
fmt = "ruff format ."
lint = ""
test = "pytest ./tests"
fint = {composite = ["fmt", "lint"]}
qa = {composite = ["fint", "test"]}
